--- a/FRONT/my-proyecto-app/src/app/pages/notes/notes.component.html
+++ b/FRONT/my-proyecto-app/src/app/pages/notes/notes.component.html
@@ -1,14 +1,16 @@
 <!-- notes.component.html -->
-<p>notes works!</p>
 
 <div id="login-screen" class="page">
   <div class="card">
     <div class="header">
-      <img src="assets/login/img/login.png" alt="TextilTech Logo" class="logo" />
+      <img
+        src="assets/login/img/login.png"
+        alt="TextilTech Logo"
+        class="logo"
+      />
       <h1>Sistema de Manufactura de Textiles</h1>
     </div>
 
-    <!-- 🔁 Quitamos el <form> y usamos (click) como en tu ejemplo -->
     <div class="field">
       <label for="username">Usuario</label>
       <input
@@ -16,6 +18,7 @@
         type="text"
         placeholder="Email o nombre de usuario"
         [(ngModel)]="username"
+        name="username"
         (keyup.enter)="login()"
       />
     </div>
@@ -27,6 +30,7 @@
         type="password"
         placeholder="************"
         [(ngModel)]="password"
+        name="password"
         (keyup.enter)="login()"
       />
     </div>
@@ -35,9 +39,9 @@
       type="button"
       class="btn"
       (click)="login()"
-      [disabled]="loading || !username || !password"
+      [disabled]="!username || !password"
     >
-      {{ loading ? 'Ingresando...' : 'Iniciar sesión' }}
+      Iniciar sesión
     </button>
 
     <div class="footer">
