--- a/FRONT/my-proyecto-app/src/app/pages/menu/menu.component.html
+++ b/FRONT/my-proyecto-app/src/app/pages/menu/menu.component.html
@@ -85,6 +85,10 @@
           y Turnos</a>
         <a routerLink="/menu/bitacora"
           class="mobile-nav-link border-l-4 border-transparent text-gray-700 hover:bg-gray-50 hover:border-gray-300 hover:text-gray-900 block pl-3 pr-4 py-2 text-base font-medium">Bitácora</a>
+        <a routerLink="/menu/lotes"
+          class="mobile-nav-link border-l-4 border-transparent text-gray-700 hover:bg-gray-50 hover:border-gray-300 hover:text-gray-900 block pl-3 pr-4 py-2 text-base font-medium">Lotes</a>
+        <a routerLink="/menu/ordenproduccion"
+          class="mobile-nav-link border-l-4 border-transparent text-gray-700 hover:bg-gray-50 hover:border-gray-300 hover:text-gray-900 block pl-3 pr-4 py-2 text-base font-medium">Órdenes de Producción</a>
         <a routerLink="/menu/usuarios"
           class="mobile-nav-link border-l-4 border-transparent text-gray-700 hover:bg-gray-50 hover:border-gray-300 hover:text-gray-900 block pl-3 pr-4 py-2 text-base font-medium">Usuarios</a>
         <a routerLink="/menu/configuracion"
@@ -109,6 +113,12 @@
 
         <a routerLink="/menu/bitacora" routerLinkActive="border-indigo-500 text-gray-900"
           class="nav-item desktop-nav-link border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700 inline-flex items-center px-1 pt-1 pb-2 border-b-2 text-sm font-medium">Bitácora</a>
+
+        <a routerLink="/menu/lotes" routerLinkActive="border-indigo-500 text-gray-900"
+          class="nav-item desktop-nav-link border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700 inline-flex items-center px-1 pt-1 pb-2 border-b-2 text-sm font-medium">Lotes</a>
+
+        <a routerLink="/menu/ordenproduccion" routerLinkActive="border-indigo-500 text-gray-900"
+          class="nav-item desktop-nav-link border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700 inline-flex items-center px-1 pt-1 pb-2 border-b-2 text-sm font-medium">Órdenes</a>
 
         <a routerLink="/menu/usuarios" routerLinkActive="border-indigo-500 text-gray-900"
           class="nav-item desktop-nav-link border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700 inline-flex items-center px-1 pt-1 pb-2 border-b-2 text-sm font-medium">Usuarios</a>
